// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyAwesomeApp > should match snapshot 1`] = `
<div>
  <div
    data-testid="div-app"
  >
    <h1
      data-testid="first-name-test"
    >
       
      Fernando
       
    </h1>
    <h3>
       
      Herrera
       
    </h3>
    <p>
      4
    </p>
    <p
      class="mi-clase-favorita"
    >
      Elden Ring, Hades, Celeste
    </p>
    <h1>
      Activo
    </h1>
    <p
      style="background-color: rgb(250, 250, 250); border-radius: 20px; padding: 10px; margin-top: 30px;"
    >
      {"zipCode":"ABC-123","city":"Canadá"}
    </p>
  </div>
</div>
`;

exports[`MyAwesomeApp > should match snapshot 2`] = `
<div
  data-testid="div-app"
>
  <h1
    data-testid="first-name-test"
  >
     
    Fernando
     
  </h1>
  <h3>
     
    Herrera
     
  </h3>
  <p>
    4
  </p>
  <p
    class="mi-clase-favorita"
  >
    Elden Ring, Hades, Celeste
  </p>
  <h1>
    Activo
  </h1>
  <p
    style="background-color: rgb(250, 250, 250); border-radius: 20px; padding: 10px; margin-top: 30px;"
  >
    {"zipCode":"ABC-123","city":"Canadá"}
  </p>
</div>
`;
